# TFG

./: .gitignore  CMakeCache.txt  cmake.txt
build_mac/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build_mac/.csettings/: 0.1711224672_cdtBuildSystem  0.1711224672_org.eclipse.cdt.core.settings  0.196253228_cdtBuildSystem  0.196253228_org.eclipse.cdt.core.settings
build_mac/.svn/: wc.db
build_mac/P1/: Makefile  camara_cimg  camara_opencv  cimg_compare_images  cimg_display  cimg_rgb2components  cimg_videofile  cmake_install.cmake  opencv_cimg_display  opencv_display  opencv_videofile
build_mac/leptonica/: Makefile  cmake_install.cmake
build_mac/trabajo/: Makefile  Qr_proc  bbdd_conn  bib_generator_tfg  cmake_install.cmake  dorsal_new  dorsales  make_trainer  pruebaqr  video
build_ubuntu/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build_ubuntu (copy)/: .cproject  CMakeCache.txt  Makefile
build_ubuntu (copy)/trabajo/: Makefile  cmake_install.cmake
build_ubuntu/generator/: Makefile  cmake_install.cmake
build_ubuntu/trabajo/: Makefile  bbdd_conn  bib_generator  bib_generator_tfg  cmake_install.cmake  dorsal_new  dorsales  make_trainer  video
build_win64/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
build_win64 - copia/: .cproject  CMakeCache.txt  Makefile  cmake_install.cmake
build_win64 - copia/trabajo/: Makefile  cmake_install.cmake
build_win64/trabajo/: Makefile  cmake_install.cmake
build_win64_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  TFG.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_win64_vs/Win32/Debug/ALL_BUILD/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build_win64_vs/Win32/Debug/ZERO_CHECK/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build_win64_vs/trabajo/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Qr_proc.vcxproj  Qr_proc.vcxproj.filters  cmake_install.cmake  dorsales.vcxproj  dorsales.vcxproj.filters  functions.vcxproj  functions.vcxproj.filters  make_trainer.vcxproj  make_trainer.vcxproj.filters  utilities.vcxproj  utilities.vcxproj.filters
build_win64_vs/trabajo/Qr_proc.dir/Debug/: custombuild.command.1.tlog  custombuild.write.1.tlog
build_win64_vs/trabajo/functions.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.write.1.tlog  Lib.read.1.tlog  cl.command.1.tlog  custombuild.read.1.tlog  lib.command.1.tlog
build_win64_vs/trabajo/make_trainer.dir/Debug/: make_trainer.lastbuildstate
build_win64_vs/trabajo/utilities.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.write.1.tlog  Lib.read.1.tlog  cl.command.1.tlog  lib.command.1.tlog
fuentes/: .cproject  .project  CMakeLists.txt  cimgcvMat.h  getopt_long.c  smartdisplay3.h
fuentes/P1/: CMakeLists.txt  camara_cimg.cpp  camara_opencv.cpp  cimg_compare_images.cpp  cimg_display.cpp  cimg_rgb2components.cpp  cimg_videofile.cpp  opencv_cimg_display.cpp  opencv_display.cpp  opencv_videofile.cpp
fuentes/P10/: CMakeLists.txt  cimg_binfeatures.cpp  estimate_rotation.cpp  estimate_text_rotation.cpp  segment_numbers.cpp
fuentes/P11/: CMakeLists.txt  sift_one.cpp  surf_opencv_one.cpp  surf_opencv_two.cpp
fuentes/P2/: CMakeLists.txt  autorange.cpp  autorange.h  autorange_one.cpp  autorange_video.cpp  video_time_average.cpp
fuentes/P3/: CMakeLists.txt  box_average.cpp  directional_gradient.cpp  focus_meter.cpp  linfilters.cpp  linfilters.h
fuentes/P5/: CMakeLists.txt  cimg_perspective_transform.cpp  estimate_transform.cpp  homography.cpp  mosaic.cpp  tgeometry.cpp  tgeometry.h
fuentes/P6/: CMakeLists.txt  cimg_apertura.cpp  cimg_cierre.cpp  cimg_dilatacion.cpp  cimg_erosion.cpp  distance.cpp
fuentes/P7/: CMakeLists.txt  cimg_oflow.cpp  lkdemo.cpp
fuentes/P8/: CMakeLists.txt  cimg_binsegment.cpp  cimg_umbral.cpp  median_th.cpp  otsu.cpp  segmentutils.cpp  segmentutils.h
fuentes/TFG/: CMakeLists.txt  binarizador.cpp  database_mng.cpp  database_mng.h  db_functions.cpp  db_functions.h  dorsal_new.cpp  dorsales.cpp  ftp_transfer.cpp  ftp_transfer.h  functions.cpp  functions.h  img_functions.cpp  img_functions.h  make_trainer.cpp  misc_functions.cpp  misc_functions.h  pruebaqr.cpp  tfg_dorsal.cpp  utilities.h  video.cpp
fuentes/leptonica/: environ.h
fuentes/proc/: misc.cpp  proc.cpp  proc.h
fuentes/trabajo/: CMakeLists.txt  Qr_proc.cpp  Qr_proc.h  bbdd_conn.cpp  bib_generator.cpp  bib_generator_tfg.cpp  contours_utils.cpp  contours_utils.h  database_mng.cpp  database_mng.h  dorsal_new.cpp  dorsales.cpp  functions.cpp  functions.h  make_trainer.cpp  misc.cpp  misc.h  plantilla.cpp  proc.cpp  proc.h  rw_xml.cpp  rw_xml.h  socket.cpp  utilities.cpp  video.cpp
fuentes/trabajo/proc/: misc.h  proc.cpp  proc.h
logos/: plantilla_dorsal_1.psd  prueba.txt
tmp_dir/.svn/: wc.db
trainingtess/: eng.inttemp  eng.normproto  eng.pffmtable  eng.rockwell.box.tr  eng.rockwell.exp0.box  eng.rockwell.exp0.box.tr  eng.rockwell.exp0.docx  eng.shapetable  eng.traineddata  eng.unicharset  font_properties  unicharset
